Several changes and fixes:
- Added mode for running with a priority 0 receiver. This makes it work on
  Motorola phones.
- Due to the above, create 2 broadcast receivers and decide which one to use
  during runtime.
- Implemented fix for playing nice with other BroadcastReceivers that process
  numbers as we do by first trying to get the phone number from getResultData().
- Added a custom Preference that shows the icon and version of the program.
- Clicking on the above preference will open the future page with instructions.
- Added copyright headers in all java files.

--- a/RightNumber/res/xml/preferences.xml
+++ b/RightNumber/res/xml/preferences.xml
@@ -3,11 +3,20 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:title="@string/prefs_title">
 
+  <br.com.drzoid.rightnumber.RightNumberHeaderPreference />
+
   <CheckBoxPreference android:title="@string/enable_formatting"
                       android:summaryOn="@string/enable_formatting_summary_on"
                       android:summaryOff="@string/enable_formatting_summary_off"
                       android:key="enable_formatting"
                       android:defaultValue="true" />
+                      
+  <CheckBoxPreference android:title="@string/use_priority_0_receiver"
+                      android:summaryOn="@string/use_priority_0_receiver_summary_on"
+                      android:summaryOff="@string/use_priority_0_receiver_summary_off"
+                      android:key="use_priority_0_receiver"
+                      android:dependency="enable_formatting"
+                      android:defaultValue="false" />
 
   <CheckBoxPreference android:title="@string/international_mode"
                       android:summaryOn="@string/enable_international_mode_summary_on"
